# g2o-python

./: .gitmodules  MANIFEST.in  README.md  environment.yml  meta.yaml  pyproject.toml  setup.py
.github/workflows/: arm-wheels.yml  python-package.yml  wheels-linux.yml  wheels-win-mac.yml  wheels.yml
conda-recipe/: LICENSE  meta.yaml
